# systems2atoms

./: .gitignore  MANIFEST.in  Manifest.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
analyses/hydrogen_delivery_costs/: README.md  __init__.py  s2a_systems_run_analysis.ipynb
analyses/hydrogen_networks/: requirements.txt  s2a_systems_functions.py  s2a_systems_run_analysis.ipynb
analyses/surrogates/: README.md  model_definition.py  paper-case-studies.ipynb  training.ipynb
systems2atoms/: __init__.py
systems2atoms/hydrogen_delivery_costs/: s2a_systems_functions.py  s2a_systems_run_analysis.ipynb
systems2atoms/hydrogen_networks/: s2a_systems_functions.py
systems2atoms/hyperplanetree/: README.md  __init__.py  pyproject.toml  requirements.txt
systems2atoms/hyperplanetree/hyperplanetree/: __init__.py  _classes.py  hyperplane_tree.py  linear_combinations.py  lineartree.py  omlt.py  quadric_transform.py  quadric_tree.py  uq.py
systems2atoms/hyperplanetree/notebooks/: Notebook2-PHT-surrogates.ipynb  Notebook3-HEX-optimization.ipynb  regression-tutorial.ipynb
systems2atoms/materials/: HCOOH_decomposition_111.mkm  HCOOH_decomposition_111.pkl  HCOOH_decomposition_211.mkm  HCOOH_decomposition_211.pkl  NN_list_fn.py  Pd_wulff_POSCAR_4.0_nm  README  README.md  energies_111.txt  energies_211.txt  environment.yml  fn_dia_site.py  get_tof.py  log_analysis.py  (+7 more)
tests/: test_hydrogen_delivery_costs.py  test_hydrogen_networks.py  test_hyperplanetree.py  test_quadrictree.py  test_surrogates.py  test_systems.py
(+978 files in other folders)
